# GraphsInC

./: .gitignore  CMakeLists.txt
include/: graph.h  graph_core.h  graph_types.h
src/: graph.c  main.c
tests/: test_graph.c
